--- a/arxiv/2022_03_arxiv.html
+++ b/arxiv/2022_03_arxiv.html
@@ -188,7 +188,62 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05058">https://arxiv.org/abs/2203.05058</a></span> Quantum Error Correction in SYK and Bulk Emergence ***</p>
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05480">https://arxiv.org/abs/2203.05480</a></span> Pair-density-wave and chiral superconductivity in twisted bilayer transition-metal-dichalcogenides *** (Yi-Ming Wu, Hong Yao)</p>
 <p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04990">https://arxiv.org/abs/2203.04990</a></span> Universal T-linear resistivity in two-dimensional quantum-critical metals from spatially random interactions ***** (Aavishkar A. Patel, Haoyu Guo, Ilya Esterlis, Subir Sachdev)</p>
-<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05004">https://arxiv.org/abs/2203.05004</a></span> Nonlinear Bosonization of Fermi Surfaces: The Method of Coadjoint Orbits (Dam Thanh Son)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05004">https://arxiv.org/abs/2203.05004</a></span> Nonlinear Bosonization of Fermi Surfaces: The Method of Coadjoint Orbits (Dam Thanh Son)</p><br>
+<p class="p1">20220314</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06163">https://arxiv.org/abs/2203.06163</a></span> Magic angles in twisted bilayer graphene near commensuration: towards a hyper-magic manifold ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06140">https://arxiv.org/abs/2203.06140</a></span> Orbital-selective Mott phase as a dehybridization fixed point ** (Qimiao Si)</p>
+<p class="p2"><br></p>
+<p class="p1">20220315</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06188">https://arxiv.org/abs/2203.06188</a></span> Hilbert space shattering and dynamical freezing in the quantum Ising model 88 9Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.07292">https://arxiv.org/abs/2203.07292</a></span> Hyperbolic topological band insulators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.07356">https://arxiv.org/abs/2203.07356</a></span> Unified Theory of the Anomalous and Topological Hall Effects with Phase Space Berry Curvatures</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.07365">https://arxiv.org/abs/2203.07365</a></span> Intertwining orbital current order and superconductivity in Kagome metal (Hyeok-Jun Yang, Hee Seung Kim, Min Yong Jeong, Yong Baek Kim, Myung Joon Han, SungBin Lee)*</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06193">https://arxiv.org/abs/2203.06193</a></span> Strategy to Extract Kitaev Interaction using Symmetry in Honeycomb Mott Insulators ** (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06192">https://arxiv.org/abs/2203.06192</a></span> Supercurrent induced resonant optical response ** (Philip J. D. Crowley, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.06538">https://arxiv.org/abs/2203.06538</a></span> Emergent gauge field from self-referencing phase factor on many-body wave functions and superconductivity ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.07527">https://arxiv.org/abs/2112.07527</a></span> supercharge qSupersymmetric free fermions and bosons: Locality, symmetry and topology</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05360">https://arxiv.org/abs/2111.05360</a></span> Confinement in the tricritical Ising model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.02210">https://arxiv.org/abs/2101.02210</a></span> Higher-form and (non-)Stückelberg symmetries in non-equilibrium systems ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220316</p>
+<p class="p3"><a href="https://arxiv.org/abs/2203.07453">https://arxiv.org/abs/2203.07453</a><span class="s2"> Dissipation Induced Flat Bands</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.00004">https://arxiv.org/abs/2109.00004</a></span> UV/IR Mixing in Marginal Fermi Liquids (Weicheng Ye, Sung-Sik Lee, Liujun Zou)</p>
+<p class="p2"><br></p>
+<p class="p1">20220317</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.00004">https://arxiv.org/abs/2109.00004</a></span> UV/IR Mixing in Marginal Fermi Liquids ***** (Weicheng Ye, Sung-Sik Lee, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08173">https://arxiv.org/abs/2203.08173</a></span> Complex Supersymmetry in Graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.01909">https://arxiv.org/abs/2106.01909</a></span> Supercurrent diode effect and finite momentum superconductivity ***** (Noah F. Q. Yuan, Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220318</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.09083">https://arxiv.org/abs/2203.09083</a></span> Functional Renormalization Group Study of Superconductivity in Rhombohedral Trilayer Graphene (Allan H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08905">https://arxiv.org/abs/2203.08905</a></span> Probing confinement in a Z2 lattice gauge theory on a quantum computer **** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08847">https://arxiv.org/abs/2203.08847</a></span> Topological Disorder Parameter **** (Zi Yang Meng, Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08641">https://arxiv.org/abs/2203.08641</a></span> Phonon renormalization and Pomeranchuk instability in the Holstein model ** (Peter Kopietz)</p>
+<p class="p2"><br></p>
+<p class="p2"><br></p>
+<p class="p1">20220321</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.09801">https://arxiv.org/abs/2203.09801</a></span> Chiral-phonon-induced current in helical crystals (Shuichi Murakami)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2203.09966">https://arxiv.org/abs/2203.09966</a><span class="s2"> Multifold Hopf semimetals *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.09819">https://arxiv.org/abs/2203.09819</a></span> Semi–classical simulation of spin-1 magnets ** (Nic Shannon)</p>
+<p class="p2"><br></p>
+<p class="p1">20220322</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.10110">https://arxiv.org/abs/2203.10110</a></span> Snowmass White Paper: Effective Field Theories for Condensed Matter Systems ***** (Tomas Braunera, Sean A. Hartnollb, Pavel Kovtunc, Hong Liud, Mark Mezeie, Alberto Nicolisf, Riccardo Pencog, Shu-Heng Shaoh, Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.10151">https://arxiv.org/abs/2203.10151</a></span> Orbital physics: glorious past, bright future **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.10943">https://arxiv.org/abs/2203.10943</a></span> Quantum turbulence and Planckian dissipation ** (G.E. Volovik)</p>
+<p class="p2"><br></p>
+<p class="p1">20220323</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.11221">https://arxiv.org/abs/2203.11221</a></span> Nematic phases and elastoresistivity from a multiorbital strange metal ***** (Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.11292">https://arxiv.org/abs/2203.11292</a></span> Covariant techniques in Quantum Field Theory ****</p>
+<p class="p2"><br></p>
+<p class="p1">20220324</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12563">https://arxiv.org/abs/2203.12563</a></span> Classifying phases protected by matrix product operator symmetries using matrix product states **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.11975">https://arxiv.org/abs/2203.11975</a></span> Finite-depth scaling of infinite quantum circuits for quantum critical points ** (Frank Pollmann)</p>
+<p class="p2"><br></p>
+<p class="p1">20220325</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12753">https://arxiv.org/abs/2203.12753</a></span> Spectral Form Factor of a Quantum Spin Glass ***** (Victor Galitski, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12629">https://arxiv.org/abs/2203.12629</a></span> Random Field φ3 Model and Parisi-Sourlas Supersymmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12844">https://arxiv.org/abs/2203.12844</a></span> Strongly correlated superconductivity with long-range spatial fluctuations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13244">https://arxiv.org/abs/2203.13244</a></span> Fractionalization of subsystem symmetries in two dimensions ***** (David T. Stephen, Arpit Dua, Jos ́e Garre-Rubio, Dominic J. Williamson, Michael Hermele)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
