--- a/arxiv/2022_03_arxiv.html
+++ b/arxiv/2022_03_arxiv.html
@@ -243,7 +243,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12753">https://arxiv.org/abs/2203.12753</a></span> Spectral Form Factor of a Quantum Spin Glass ***** (Victor Galitski, Brian Swingle)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12629">https://arxiv.org/abs/2203.12629</a></span> Random Field φ3 Model and Parisi-Sourlas Supersymmetry ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.12844">https://arxiv.org/abs/2203.12844</a></span> Strongly correlated superconductivity with long-range spatial fluctuations</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13244">https://arxiv.org/abs/2203.13244</a></span> Fractionalization of subsystem symmetries in two dimensions ***** (David T. Stephen, Arpit Dua, Jos ́e Garre-Rubio, Dominic J. Williamson, Michael Hermele)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13244">https://arxiv.org/abs/2203.13244</a></span> Fractionalization of subsystem symmetries in two dimensions ***** (David T. Stephen, Arpit Dua, Jos ́e Garre-Rubio, Dominic J. Williamson, Michael Hermele)</p><br>
+<p class="p1">20220328</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13378">https://arxiv.org/abs/2203.13378</a></span> Magnetic Impurity as a Local Probe of the U (1) Quantum Spin Liquid with Spinon Fermi Surface *** (Patrick A. Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13688">https://arxiv.org/abs/2203.13688</a></span> ARPES in strongly disordered systems – theory of electronic band’s melting ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13615">https://arxiv.org/abs/2203.13615</a></span> Quasiparticles, Flat Bands, and the Melting of Hydrodynamic Matter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13274">https://arxiv.org/abs/2203.13274</a></span> Evolution of Dynamical Signature in the X-cube Fracton Topological Order ***** (Peng Ye, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13407">https://arxiv.org/abs/2203.13407</a></span> Weak-coupling to strong-coupling quantum criticality crossover in a Kitaev quantum spin liquid α-RuCl3 *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13490">https://arxiv.org/abs/2203.13490</a></span> Phase diagrams and excitations of anisotropic S = 1 quantum magnets on the triangular lattice ** (Lucile Savary)</p>
+<p class="p2"><br></p>
+<p class="p1">20220329</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13967">https://arxiv.org/abs/2203.13967</a></span> Anisotropic three-dimensional quantum Hall effect and magnetotransport in mesoscopic Weyl semimetals ** (Xiao-Xiao Zhang, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14861">https://arxiv.org/abs/2203.14861</a></span> Bloch Theorem Dictated Wave Chaos in Microcavity Crystals (Chang-Hwan Yi, Hee Chul Park, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.13849">https://arxiv.org/abs/2203.13849</a></span> The Survival of Ernst Ising and the Struggle to Solve His Model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14917">https://arxiv.org/abs/2203.14917</a></span> Effective Field Theories for the Exactly Solvable Stabilizer Spin Models ***** (Jintae Kim, Yun-Tak Oh, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14774">https://arxiv.org/abs/2203.14774</a></span> Phase structure of self-dual lattice gauge theories in 4d</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14829">https://arxiv.org/abs/2203.14829</a></span> Reconstruction of modular data from SL2(<span class="s2">ℤ</span>) representations (Siu-Hung Ng, Eric C Rowell, Zhenghan Wang, Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14168">https://arxiv.org/abs/2203.14168</a></span> A construction of exotic metallic states ***** (Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14576">https://arxiv.org/abs/2203.14576</a></span> Bulk-interface correspondence from quantum distance in flat band systems (Jun-Won Rhim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14350">https://arxiv.org/abs/2203.14350</a></span> Aspects of higher dimensional quantum Hall effect: Bosonization, entanglement entropy ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220330</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.15791">https://arxiv.org/abs/2203.15791</a></span> Duality, Criticality, Anomaly, and Topology in Quantum Spin-1 Chains ***** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14992">https://arxiv.org/abs/2203.14992</a></span> Operator fusion from wavefunction overlaps: Universal finite-size corrections and application to Haagerup model (Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220331</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16362">https://arxiv.org/abs/2203.16362</a></span> The scaled-invariant Planckian metal and quantum criticality in Ce1−xNdxCoIn5 ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16480">https://arxiv.org/abs/2203.16480</a></span> Realization of the Topological Hopf Term in a Two-Dimensional Lattice Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16358">https://arxiv.org/abs/2203.16358</a></span> Floquet States in Open Quantum Systems ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
