--- a/arxiv/2022_04_arxiv.html
+++ b/arxiv/2022_04_arxiv.html
@@ -130,7 +130,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.17161">https://arxiv.org/abs/2203.17161</a></span> Optical response of two-dimensional Dirac materials with a flat band</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16853">https://arxiv.org/abs/2203.16853</a></span> Thermal Hall responses in frustrated honeycomb spin systems</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16548">https://arxiv.org/abs/2203.16548</a></span> Critical metallic phase in the overdoped random t-J model ***** (Maine Christos, Darshan G. Joshi, Subir Sachdev, Maria Tikhanovskaya)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16555">https://arxiv.org/abs/2203.16555</a></span> Entanglement dynamics of random quantum channels (Timothy H. Hsieh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.16555">https://arxiv.org/abs/2203.16555</a></span> Entanglement dynamics of random quantum channels (Timothy H. Hsieh)</p><br>
+<p class="p1">20220404</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.00013">https://arxiv.org/abs/2204.00013</a></span> Quantum spin liquids bootstrapped from Ising criticality in Rydberg arrays ***** (Kevin Slagle, Xie Chen, Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.07552">https://arxiv.org/abs/2109.07552</a></span> Emerging (2 + 1)D massive graviton in graphene-like systems **** (Jiannis K. Pachos)</p>
+<p class="p2"><br></p>
+<p class="p1">20220405</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01019">https://arxiv.org/abs/2204.01019</a></span> Nearly flat bands in twisted triple bilayer graphene (Jiseon Shin, Hongki Min, Jeil Jung)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.00632">https://arxiv.org/abs/2204.00632</a></span> Emergent Z2 gauge theories and topological excitations in Rydberg atom **** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01279">https://arxiv.org/abs/2204.01279</a></span> Effective Field Theory of Dipolar Braiding Statistics in Two Dimensions ***** (Yun-Tak Oh, Jintae Kim, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.06243">https://arxiv.org/abs/2202.06243</a></span> The Lieb-Schultz-Mattis Theorem A Topological Point of View **** (Hal Tasaki)</p>
+<p class="p2"><br></p>
+<p class="p1">20220406</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01924">https://arxiv.org/abs/2204.01924</a></span> Spontaneously broken supersymmetric fracton phases with fermionic subsystem symmetries ***** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01740">https://arxiv.org/abs/2204.01740</a></span> Height-conserving quantum dimer models (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01999">https://arxiv.org/abs/2204.01999</a></span> Anti-chiral order and spin reorientation transitions of triangle-based antiferromagnets (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02158">https://arxiv.org/abs/2204.02158</a></span> Quantum Field Theory Anomalies in Condensed Matter Physics *****</p>
+<p class="p2"><br></p>
+<p class="p1">20220407</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02449">https://arxiv.org/abs/2204.02449</a></span> Superconductivity and Local Inversion-Symmetry Breaking ***** (Mark H. Fischer, Manfred Sigrist, Daniel F. Agterberg, Youichi Yanase)</p>
+<p class="p2"><br></p>
+<p class="p1">20220408</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03088">https://arxiv.org/abs/2204.03088</a></span> Effective field theory of random quantum circuits ** (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02982">https://arxiv.org/abs/2204.02982</a></span> Planckian properties of 2D semiconductor systems *** (Seongjin Ahn, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03247">https://arxiv.org/abs/2204.03247</a></span> Emergent SUSY in Two Dimensions ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03464">https://arxiv.org/abs/2204.03464</a></span> High-Tc cuprates: a story of two electron subsystems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02994">https://arxiv.org/abs/2204.02994</a></span> Superconductivity, charge density wave, and supersolidity in flat bands with tunable quantum metric ***** (Johannes S. Hofmann, Erez Berg, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03045">https://arxiv.org/abs/2204.03045</a></span> Generalized Symmetries in Condensed Matter ***** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03131">https://arxiv.org/abs/2204.03131</a></span> Symmetry Protected Topological Criticality: Decorated Defect Construction, Signatures and Stability ***** (Masaki Oshikawa)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
