--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <style type="text/css">
 	p.emphtext{
-  font-size: 18px;
+  font-size: 15px;
 }
  @font-face {
   font-family: 'Open Sans';
@@ -125,8 +125,13 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<b><p class=emphtext>Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
-My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br><br>
+<b>
+<!---	
+	<p class=emphtext>
+
+	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
+
+My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	---!><br>
 pdf version of CV: <a href="20210910_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/09/10)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
