--- a/arxiv/2022_04_arxiv.html
+++ b/arxiv/2022_04_arxiv.html
@@ -157,7 +157,85 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03464">https://arxiv.org/abs/2204.03464</a></span> High-Tc cuprates: a story of two electron subsystems ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.02994">https://arxiv.org/abs/2204.02994</a></span> Superconductivity, charge density wave, and supersolidity in flat bands with tunable quantum metric ***** (Johannes S. Hofmann, Erez Berg, Debanjan Chowdhury)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03045">https://arxiv.org/abs/2204.03045</a></span> Generalized Symmetries in Condensed Matter ***** (John McGreevy)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03131">https://arxiv.org/abs/2204.03131</a></span> Symmetry Protected Topological Criticality: Decorated Defect Construction, Signatures and Stability ***** (Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.03131">https://arxiv.org/abs/2204.03131</a></span> Symmetry Protected Topological Criticality: Decorated Defect Construction, Signatures and Stability ***** (Masaki Oshikawa)</p><br>
+<p class="p1">20220411</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.04132">https://arxiv.org/abs/2204.04132</a></span> Local Ward identities for collective excitations in fermionic systems with spontaneously broken symmetries ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220412</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.04884">https://arxiv.org/abs/2204.04884</a></span> Gross-Neveu and deconfined quantum criticalities in an extended Hubbard model on the square lattice ** (Zi Yang Meng, Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.12355">https://arxiv.org/abs/2202.12355</a></span> Symmetric Mass Generation in the 1+1 Dimensional Chiral Fermion 3-4-5-0 Model ** (Juven Wang, Yi-Zhuang You)</p>
+<p class="p2"><br></p>
+<p class="p1">20220413</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05342">https://arxiv.org/abs/2204.05342</a></span> Phonon-induced modification of quantum criticality *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05314">https://arxiv.org/abs/2204.05314</a></span> Non-equilibrium phase transitions in competitive markets caused by network effects (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05319">https://arxiv.org/abs/2204.05319</a></span> Quantum-critical electrodynamics of Luttinger fermions ***** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05341">https://arxiv.org/abs/2204.05341</a></span> Excitations in the Higher Lattice Gauge Theory Model for Topological Phases II: the 2+1d Case</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05441">https://arxiv.org/abs/2204.05441</a></span> Origin of nonsymmorphic bosonization formulas in generalized antiferromagnetic Kitaev spin-1/2 chains from a renormalization group point of view **** (Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05504">https://arxiv.org/abs/2204.05504</a></span> Mottness, Phase String, and High-Tc Superconductivity **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01914">https://arxiv.org/abs/2204.01914</a></span> TASI Lectures on the Mathematics of String Dualities</p>
+<p class="p2"><br></p>
+<p class="p1">20220414</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06019">https://arxiv.org/abs/2204.06019</a></span> Near-Equilibrium Approach to Transport in Complex Sachdev-Ye-Kitaev Models ***** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06559">https://arxiv.org/abs/2204.06559</a></span> Topological Multipartite Entanglement in a Fermi Liquid *** (Pok Man Tam, Charles L. Kane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06006">https://arxiv.org/abs/2204.06006</a></span> Fracton hydrodynamics without time-reversal symmetry ***** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06146">https://arxiv.org/abs/2204.06146</a></span> Multi-critical point and unified description of broken-symmetry phases in spin-1/2 anti-ferromagnets on a square lattice **** (Kun Yang)</p>
+<p class="p2"><br></p>
+<p class="p1">20220415</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06567">https://arxiv.org/abs/2204.06567</a></span> Analogue viscous current flow near the onset of superconductivity (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06574">https://arxiv.org/abs/2204.06574</a></span> Moir ́e Gravity and Cosmology ** (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06570">https://arxiv.org/abs/2204.06570</a></span> Tuning the Topological θ-Angle in Cold-Atom Quantum Simulators of Gauge Theories ** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06589">https://arxiv.org/abs/2204.06589</a></span> The boundaries of 2+1D abelian fermionic topological orders ***** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.07111">https://arxiv.org/abs/2204.07111</a></span> Position-Dependent Excitations and UV/IR Mixing in the ZN Rank-2 Toric Code and its Low-Energy Effective Field Theory ***** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04045">https://arxiv.org/abs/2201.04045</a></span> Raman response and shear viscosity in the non-Fermi liquid phase of Luttinger semimetals ***** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20220418</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.07194">https://arxiv.org/abs/2204.07194</a></span> Spectral Form Factor in Sparse SYK Models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.07244">https://arxiv.org/abs/2204.07244</a></span> Dirac cone spectroscopy of strongly correlated phases in twisted trilayer graphene *** (Eslam Khalaf, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.05326">https://arxiv.org/abs/2204.05326</a></span> Entanglement in interacting quenched Quantum Field Theory ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220419</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08087">https://arxiv.org/abs/2204.08087</a></span> Replica Higher-Order Topology of Hofstadter Butterflies in Twisted Bilayer Graphene ***** (Sun-Woo Kim, Sunam Jeon, Moon Jip Park, Youngkuk Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04045">https://arxiv.org/abs/2201.04045</a></span> Raman response and shear viscosity in the non-Fermi liquid phase of Luttinger semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05429">https://arxiv.org/abs/2111.05429</a></span> Magnetotropic Response in Ruthenium Chloride (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.07583">https://arxiv.org/abs/2204.07583</a></span> Quantum chaos in 2D gravity ***** (A. Altland, E. Verlinde)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.07585">https://arxiv.org/abs/2204.07585</a></span> Gifts from anomalies: Exact results for Landau phase transitions in metals ***** (Dominic V. Else, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08365">https://arxiv.org/abs/2204.08365</a></span> Dissipation and geometry in nonlinear quantum transports of multiband electronic systems ** (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08393">https://arxiv.org/abs/2204.08393</a></span> Proton Stability: From the Standard Model to Ultra Unification *** (Juven Wang, Zheyan Wan, Yi-Zhuang You)</p>
+<p class="p2"><br></p>
+<p class="p1">20220420</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08777">https://arxiv.org/abs/2204.08777</a></span> Sign Problem in Quantum Monte Carlo Simulation ***** (Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08737">https://arxiv.org/abs/2204.08737</a></span> Glass transition as a topological phase transition</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.09025">https://arxiv.org/abs/2204.09025</a></span> Non-invertible Condensation, Duality, and Triality Defects in 3+1 Dimensions ***** (Yichul Choi, Clay Co ́rdova, Po-Shen Hsin, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p2"><br></p>
+<p class="p1">20220421</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.09629">https://arxiv.org/abs/2204.09629</a></span> The shared universality of charged black holes and the many many-body SYK model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01924">https://arxiv.org/abs/2204.01924</a></span> Spontaneously broken supersymmetric fracton phases with fermionic subsystem symmetries ***** (Hosho Katsura, Yu Nakayama)</p>
+<p class="p2"><br></p>
+<p class="p1">20220422</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.09811">https://arxiv.org/abs/2204.09811</a></span> Acoustic-phonon-mediated superconductivity in moir ́eless graphene multilayers (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.10113">https://arxiv.org/abs/2204.10113</a></span> Spin-momentum locking from topological quantum chemistry: applications to multifold fermions (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.09998">https://arxiv.org/abs/2204.09998</a></span> SYK model with an extra diagonal perturbation: phase transition in the eigenvalue spectrum</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.09691">https://arxiv.org/abs/2204.09691</a></span> Twisted bilayer U(1) Dirac spin liquids ***** (Leon Balents)</p>
+<p class="p2"><br></p>
+<p class="p1">20220425</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.10329">https://arxiv.org/abs/2204.10329</a></span> Chiral Broken Symmetry Descendants of the Kagom ́e Lattice Chiral Spin Liquid (Arun Paramekanti)</p>
+<p class="p2"><br></p>
+<p class="p1">20220426</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.10865">https://arxiv.org/abs/2204.10865</a></span> Continuous Mott transition in moir ́e semiconductors: role of long-wavelength inhomogeneities **** (T. Senthil, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07866">https://arxiv.org/abs/2012.07866</a></span> Transport in the non-Fermi liquid phase of isotropic Luttinger semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.11578">https://arxiv.org/abs/2204.11578</a></span> Scattering phenomena for spin transport in Kitaev spin liquid</p>
+<p class="p2"><br></p>
+<p class="p1">20220427</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12482">https://arxiv.org/abs/2204.12482</a></span> Fractional Vortices, Z2 Gauge Theory, and the Confinement-Deconfinement Transition *** (Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12485">https://arxiv.org/abs/2204.12485</a></span> Competing orders, the Wess-Zumino-Witten term, and spin liquids *** (Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.11930">https://arxiv.org/abs/2204.11930</a></span> Superconductivity near a nematoelastic quantum critical point</p>
+<p class="p2"><br></p>
+<p class="p1">20220428</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.12579">https://arxiv.org/abs/2204.12579</a></span> Pairing symmetry of twisted bilayer graphene: a phenomenological synthesis ***** (Ethan Lake, Adarsh S. Patri, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20220429</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.08393">https://arxiv.org/abs/2204.08393</a></span> Proton Stability: From the Standard Model to Ultra Unification *** (Juven Wang, Zheyan Wan, Yi-Zhuang You)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2112.11166">https://arxiv.org/abs/2112.11166</a><span class="s2"> Functional Analysis ****</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
