--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Articles related to my works:
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>
+			<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>, accepted in PRB
 		</li><li><div>
 		<span class="cvitem"> "Non-Landau Fermi Liquid induced by Bose Metal" </span>
 		<span class="cvperiod"></span>
