--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <b>
-<!---	
+<!--	
 	<p class=emphtext>
 
 	Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
 
-My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	---!><br>
-pdf version of CV: <a href="20210910_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/09/10)</a>
+My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice"</b><br>	--><br>
+	
+pdf version of CV: <a href="20220607_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2022/06/07)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -148,11 +149,17 @@ Articles related to my works:
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07 (in Korean)</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05 (in Korean)</a><br><br>
-<!--Blog: <a href="/blog/">here</a>--!>
+<!--Blog: <a href="/blog/">here</a>-->
 <!-- Publication --><br>
 	<div>
 	<div class="cvitemize"> Publication </div>
 		<ul><li><div>
+		<span class="cvitem"> "Non-Fermi liquid behavior and quantum criticality in the multipolar Bose-Fermi Kondo model for cubic heavy fermion systems" </span>
+		<span class="cvperiod"></span>
+		</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=wdyTjP0AAAAJ" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2206.02808">arXiv:2206.02808</a>
+		</li><li><div>
 		<span class="cvitem"> "Fractonic Quantum Phases in Breathing Pyrochlore Lattice" </span>
 		<span class="cvperiod"></span>
 		</div>
