--- a/arxiv/2022_06_arxiv.html
+++ b/arxiv/2022_06_arxiv.html
@@ -145,7 +145,36 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.00713">https://arxiv.org/abs/2206.00713</a></span> Green’s Function Approach to Interacting Higher-order Topological Insulators (Heqiu Li, Hae-Young Kee, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01110">https://arxiv.org/abs/2206.01110</a></span> Generalized Thouless Pumps in 1 + 1-dimensional Interacting Fermionic Systems ** (Ken Shiozaki, Masatoshi Sato)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01174">https://arxiv.org/abs/2206.01174</a></span> Dynamical Planckian scaling of charge response at a particle-hole-asymmetric quantum critical point with Kondo destruction **** (Qimiao Si)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03668">https://arxiv.org/abs/2111.03668</a></span> Fractons, dipole symmetries and curved spacetime *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03668">https://arxiv.org/abs/2111.03668</a></span> Fractons, dipole symmetries and curved spacetime *****</p><br>
+<p class="p1">20220606</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01213">https://arxiv.org/abs/2206.01213</a></span> Correlated metals and unconventional superconductivity in rhombohedral trilayer graphene: a renormalization group analysis ***** (Da-Chuan Lu, Shubhayu Chatterjee, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01221">https://arxiv.org/abs/2206.01221</a></span> Itinerant spin polaron and metallic ferromagnetism in semiconductor moir ́e superlattices *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01222">https://arxiv.org/abs/2206.01222</a></span> Exactly solvable model for a deconfined quantum critical point in 1D **** (Michael Levin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01593">https://arxiv.org/abs/2206.01593</a></span> Breakdown of the Migdal-Eliashberg Theory and a Theory of Lattice-Fermionic Superfluidity</p>
+<p class="p2"><br></p>
+<p class="p1">20220607</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01762">https://arxiv.org/abs/2206.01762</a></span> Quantum Interference of Hydrodynamic Modes in a Dirty Marginal Fermi Liquid *** (Matthew S. Foster)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02727">https://arxiv.org/abs/2206.02727</a></span> Boson-fermion duality with subsystem symmetry *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01783">https://arxiv.org/abs/2206.01783</a></span> Odd-frequency pairing and time-reversal symmetry breaking for repulsive interactions **** (Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02055">https://arxiv.org/abs/2206.02055</a></span> How to recognize the universal aspects of Mott criticality? ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02489">https://arxiv.org/abs/2206.02489</a></span> Classification of time-reversal symmetric topological superconducting phases for conventional pairing symmetries ***** (Ken Shiozaki, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.10806">https://arxiv.org/abs/2205.10806</a></span> Gauge Symmetry in Shape Dynamics *** (Frank Wilczek)</p>
+<p class="p2"><br></p>
+<p class="p1">20220608</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02808">https://arxiv.org/abs/2206.02808</a></span> Non-Fermi liquid behavior and quantum criticality in the multipolar Bose-Fermi Kondo model for cubic heavy fermion systems ***** (SangEun Han, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02799">https://arxiv.org/abs/2206.02799</a></span> Particle creation: Schwinger + Unruh + Hawking (G.E. Volovik)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2206.01716">https://arxiv.org/abs/2206.01716</a><span class="s2"> The quantum covariant derivative</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.02823">https://arxiv.org/abs/2206.02823</a></span> From entanglement generated dynamics to the gravitational anomaly and chiral central charge ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.03297">https://arxiv.org/abs/2206.03297</a></span> Random singlet-like phase of disordered Hubbard chains **** (Rahul Nandkishore, S. Raghu)</p>
+<p class="p2"><br></p>
+<p class="p1">20220609</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04034">https://arxiv.org/abs/2206.04034</a></span> Feynman-Kac theory of time-integrated functionals: Itô versus functional calculus **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.10806">https://arxiv.org/abs/2205.10806</a></span> Gauge Symmetry in Shape Dynamics *** (Frank Wilczek)</p>
+<p class="p2"><br></p>
+<p class="p1">20220610</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04073">https://arxiv.org/abs/2206.04073</a></span> SO(4) multicriticality of two-dimensional Dirac fermions ***** (Igor F. Herbut, Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04288">https://arxiv.org/abs/2206.04288</a></span> Even-odd parity transition in strongly correlated locally noncentrosymmetric superconductors : An application to CeRh2As2 *** (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04087">https://arxiv.org/abs/2206.04087</a></span> Phase diagram of a bilinear-biquadratic spin-1 model on the triangular lattice from density matrix renormalization group simulations ***** (Chong Wang, Yin-Chen He)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
