--- a/arxiv/2022_06_arxiv.html
+++ b/arxiv/2022_06_arxiv.html
@@ -174,7 +174,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20220610</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04073">https://arxiv.org/abs/2206.04073</a></span> SO(4) multicriticality of two-dimensional Dirac fermions ***** (Igor F. Herbut, Michael M. Scherer)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04288">https://arxiv.org/abs/2206.04288</a></span> Even-odd parity transition in strongly correlated locally noncentrosymmetric superconductors : An application to CeRh2As2 *** (Youichi Yanase)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04087">https://arxiv.org/abs/2206.04087</a></span> Phase diagram of a bilinear-biquadratic spin-1 model on the triangular lattice from density matrix renormalization group simulations ***** (Chong Wang, Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04087">https://arxiv.org/abs/2206.04087</a></span> Phase diagram of a bilinear-biquadratic spin-1 model on the triangular lattice from density matrix renormalization group simulations ***** (Chong Wang, Yin-Chen He)</p><br>
+<p class="p1">20220613</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.05264">https://arxiv.org/abs/2206.05264</a></span> Theory of Moir ́e Magnets and Topological Magnons : Applications to Twisted Bilayer CrI3 *** (Kyoung-Min Kim, Do Hoon Kiem, Myung Joon Han, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04858">https://arxiv.org/abs/2206.04858</a></span> Protected Gapless Edge States In Trivial Topology *** (Yu-Ping Lin, Ying-Jer Kao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04701">https://arxiv.org/abs/2206.04701</a></span> Efficient tensor network simulation of quantum many-body physics on sparse graphs (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04876">https://arxiv.org/abs/2206.04876</a></span> Correlated normal state fermiology and topological superconductivity in UTe2 *** (Seung Hun Lee, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.05261">https://arxiv.org/abs/2206.05261</a></span> Controllable Floquet edge modes in a multi-frequency driving system *** (HaRu K. Park, Junmo Jeon, Gil Young Cho, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.04735">https://arxiv.org/abs/2206.04735</a></span> The role of electromagnetic gauge-field fluctuations in the selection between chiral and nematic superconductivity (Rafael M. Fernandes)</p>
+<p class="p2"><br></p>
+<p class="p1">20220614</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.05384">https://arxiv.org/abs/2206.05384</a></span> Entanglement Phase Transition Induced by the Non-Hermitian Skin Effect (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.05599">https://arxiv.org/abs/2206.05599</a></span> Non-Abelian topological superconductivity in maximally twisted double-layer spin-triplet-valley-singlet superconductors (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.06183">https://arxiv.org/abs/2206.06183</a></span> Phonon Thermal Hall Conductivity from Scattering with Collective Fluctuations *** (Leon Balents, Lucile Savary)</p>
+<p class="p2"><br></p>
+<p class="p1">20220615</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.06609">https://arxiv.org/abs/2206.06609</a></span> Seven Etudes on dynamical Keldysh Model</p>
+<p class="p2"><br></p>
+<p class="p1">20660616</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07191">https://arxiv.org/abs/2206.07191</a></span> Interstitial-induced ferromagnetism in a two-dimensional Wigner crystal ** (Kyung-Su Kim, Steven A. Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07478">https://arxiv.org/abs/2206.07478</a></span> Hecke Relations, Cosets and the Classification of 2d RCFTs (Kimyeong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07670">https://arxiv.org/abs/2206.07670</a></span> Energy Transport between Strange Quantum Baths ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07575">https://arxiv.org/abs/2206.07575</a></span> Superconductivity Near a Quantum Critical Point in the Extreme Retardation Regime ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220617</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07717">https://arxiv.org/abs/2206.07717</a></span> Magnetic Bloch Theorem and Reentrant Flat Bands in Twisted Bilayer Graphene at 2π Flux (Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07752">https://arxiv.org/abs/2206.07752</a></span> Enigma of the vortex state in a strongly correlated d-wave superconductor (Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.08239">https://arxiv.org/abs/2206.08239</a></span> The Hierarchical Graphene model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.07725">https://arxiv.org/abs/2206.07725</a></span> Theory of oblique topological insulators *** (Eduardo Fradkin)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
