--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Articles related to my works:
 		<span class="cvperiod"></span>
 		</div>
 		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>, accepted in PRB
+			<a href="https://doi.org/10.1103/PhysRevB.105.235120">Phys. Rev. B <b>105</b>, 235120</a> (<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>)
 		</li><li><div>
 		<span class="cvitem"> "Non-Landau Fermi Liquid induced by Bose Metal" </span>
 		<span class="cvperiod"></span>
@@ -402,6 +402,12 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
+		<span class="cvitem"> 2022 CAP congress (Talk) </span>
+		<span class="cvperiod">June 2022</span>
+		</div>
+		<div class="cvitemcontent"> <a href="https://indico.cern.ch/event/1072579/contributions/4802871/">"Realization of fractonic quantum phases in the breathing pyrochlore lattice"</a> </div>	
+
+		</li><li><div>
 		<span class="cvitem"> APS March Meeting 2022 (Talk) </span>
 		<span class="cvperiod">March 2022</span>
 		</div>
